--- a/Bakery workshop/main.css
+++ b/Bakery workshop/main.css
@@ -80,14 +80,20 @@ body {
     border: none;
 }
 
+.aboutus {
+  margin-right: 10px;
+}
+
 /* card section */
 
 .card-img-top{
     width: 100%;
     height: 15vw;
     object-fit: cover;
+}
 
-
+.card {
+  margin-bottom: 30px;
 }
 
 /* register */
@@ -151,22 +157,56 @@ table{
 }
 
 /* Toast */
-.toast {
+.toaster {
   width: 20%;
-  padding: 12px 0px;
-  background-color: rgb(158, 247, 25);
+  padding: 5px 0px;
+  background-color: rgb(247, 114, 25);
   position: fixed;
   /* align-self: flex-end; */
   color: #000;
-  left: 89%;
-  top: 80vh;
+  left: 80%;
+  top: 8vh;
   border-radius: 5px;
   display: none;
   z-index: 9000;
+  opacity: 1;
 }
 
 .message {
   padding: 0 10px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #fff;
+}
+
+
+/* Log */
+#registerLog {
+  display: inline-flex;
+  /* display: flex; */
+  
+}
+
+#logoutBtn {
+  display: none;
+}
+
+/* Card */
+.smalltext {
+  font-size: 12px;
+}
+
+.largertext {
+  font-size: small;
+}
+
+.lightertext {
+  font-weight: 400;
+}
+
+.marginRight{
+  margin-right: 120px;
+}
+
+.mode {
+
 }
